# WallClimber

./: .gitignore  README.md  main.py  pyproject.toml  train.py
Assets/: InputSystem_Actions.cs  InputSystem_Actions.inputactions  UniversalRenderPipelineGlobalSettings.asset  climber.yaml  climber_custom.yaml  climber_encoder.yaml
Assets/Agents/: Climber-strain0.onnx  Climber.onnx  VibeClimber.onnx
Assets/Prefab/: Arm.prefab  Climber.prefab  Forearm.prefab  Handle.prefab  InputManager.prefab  Main Camera.prefab
Assets/Scenes/: WallClimber.unity  WallClimberGrips.unity  WallClimberGripsTest.unity  WallClimberInference.unity  WallClimberShow.unity
Assets/Scripts/: Arm.cs  Climber.cs  ClimberVision.cs  Forearm.cs  GripGridPlacer.cs  GripPoint.cs  InputManager.cs  MyCamera.cs  WallClimberHorizontalAreaReplicator.cs  WallClimberInferenceScene.cs  WallClimberParallelTrainingBootstrap.cs
Assets/_Recovery/: 0 (1).unity  0 (2).unity  0 (3).unity  0 (4).unity  0 (5).unity  0 (6).unity  0 (7).unity
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
custom_trainer/: README.md  __init__.py  config.py  encoders.py  networks.py  trainer.py
results/CustomClimber/: Climber.onnx  configuration.yaml
results/CustomClimber4Limbs/: Climber.onnx  configuration.yaml
results/CustomClimber4LimbsPosition/: Climber.onnx  configuration.yaml
results/CustomClimber4LimbsPosition2/: Climber.onnx  configuration.yaml
results/CustomClimber4LimbsPosition3/: Climber.onnx  configuration.yaml
results/Test/: Climber.onnx  configuration.yaml
(+44 files in other folders)
